--- a/calculator1.html
+++ b/calculator1.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Calculator</title>
-    <link rel="stylesheet" href="../src/styles/calculator.css">
+    <link rel="stylesheet" href="./calculator.css">
 <body>
     <div class="calculator">
         <div> <label class="heading">Calculator</label></div>
