--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Calculator</title>
-    <link rel="stylesheet" href="../src/styles/calculator.css">
+    <link rel="stylesheet" href="./calculator.css">
+    <script src="./calculator.js"></script>
 <body>
     <div class="calculator">
         <div> <label class="heading">Calculator</label></div>
@@ -49,7 +50,7 @@
             </div>
         </div>
     </div>
-    <script src="../src/scripts/calculator.js"></script>
+    
 </body>
 
 </html>
